[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/ui/CharacterGuideUI.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 9 )

[node name="CharacterGuideUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -268.0
margin_right = 437.0
margin_bottom = 240.0
texture = ExtResource( 6 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -306.0
margin_top = 11.0
margin_right = 306.0
margin_bottom = 59.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 0.843137, 0.0117647, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]=== [color=#ffd703]Combat Handbook[/color] ==="
text = "=== Combat Handbook ==="
scroll_active = false

[node name="CloseButtonMainUI" type="TextureButton" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.5
margin_top = -240.0
margin_right = -396.5
margin_bottom = -200.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 4 )
expand = true

[node name="ChaptersBox" type="NinePatchRect" parent="NinePatchRect"]
margin_left = 183.0
margin_top = 60.0
margin_right = 834.0
margin_bottom = 469.0
texture = ExtResource( 6 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Chapter1" type="ScrollContainer" parent="NinePatchRect/ChaptersBox"]
anchor_right = 0.978
anchor_bottom = 0.961
margin_left = 17.0
margin_top = 14.0
margin_right = 0.32196
margin_bottom = -0.0490112
rect_min_size = Vector2( 566, 355 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/ChaptersBox/Chapter1"]
margin_right = 590.0
margin_bottom = 1100.0
rect_min_size = Vector2( 590, 1100 )

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/ChaptersBox/Chapter1/VBoxContainer"]
margin_right = 590.0
margin_bottom = 1100.0
rect_min_size = Vector2( 590, 1100 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][color=#ffd703]Skills[/color][/center]

Skills are magical spells that you can cast to gain the upper hand in combat. There are four main types of skills: [color=#ffd703]Primary[/color] (PKEY), [color=#ffd703]Secondary[/color] (SKEY), [color=#ffd703]Tertiary[/color] (TKEY) and [color=#ffd703]Perk[/color] (PRKEY) skills.

Primary skills are ...........(fill out)"
text = "Skills

Skills are magical spells that you can cast to gain the upper hand in combat. There are four main types of skills: Primary (PKEY), Secondary (SKEY), Tertiary (TKEY) and Perk (PRKEY) skills.

Primary skills are ...........(fill out)"
scroll_active = false

[node name="ChapterSelectionLabel" type="Label" parent="NinePatchRect"]
margin_left = 35.5
margin_top = 79.0
margin_right = 147.5
margin_bottom = 111.0
custom_fonts/font = SubResource( 2 )
text = "Chapters"
align = 1

[node name="ChapterSelectionSprite" type="Sprite" parent="NinePatchRect"]
position = Vector2( 92.5, 156 )
scale = Vector2( 10.125, 10.125 )
texture = ExtResource( 3 )

[node name="ChapterSelectionOptionButton" type="OptionButton" parent="NinePatchRect"]
margin_left = 21.0
margin_top = 125.0
margin_right = 162.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 3 )
flat = true
clip_text = true
